--- a/apps/ux-films-finder/src/app/components/category/category.component.less
+++ b/apps/ux-films-finder/src/app/components/category/category.component.less
@@ -5,10 +5,11 @@
 .category {
   &__card {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 55px;
   }
 }
+
 .theme-dark {
   & a {
     color: @color-white-ff;
