footer at the bottom

--- a/apps/ux-films-finder/src/app/app.component.html
+++ b/apps/ux-films-finder/src/app/app.component.html
@@ -1,3 +1,7 @@
-<ff-header></ff-header>
-<router-outlet></router-outlet>
-<ff-footer></ff-footer>
+<div class="ff-app">
+  <ff-header></ff-header>
+  <div class="ff-content">
+    <router-outlet></router-outlet>
+  </div>
+  <ff-footer></ff-footer>
+</div>
