--- a/apps/ux-films-finder/src/app/components/footer/footer.component.html
+++ b/apps/ux-films-finder/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer__navigation-block">
       <a routerLink="/search-films" class="footer__link">Фильмы</a>
       <a routerLink="/cartoon" class="footer__link">Мультфильмы</a>
-      <a routerLink="/not-found" class="footer__link">Сериалы</a>
+      <a routerLink="/anime" class="footer__link">Аниме</a>
       <a routerLink="/for-children" class="footer__link">Детские программы</a>
     </div>
     <div class="footer__navigation-block">
@@ -15,7 +15,7 @@
     <div class="footer__navigation-block">
       <a routerLink="/news" class="footer__link">Новости</a>
       <a routerLink="/family" class="footer__link">Для всей семьи</a>
-      <a routerLink="/not-found" class="footer__link">Live TV</a>
+      <a routerLink="/live" class="footer__link">Live TV</a>
       <a routerLink="/show" class="footer__link">Телешоу</a>
     </div>
     <div class="footer__navigation-block">
@@ -27,11 +27,12 @@
   </div>
   <div class="footer__credits">
     <p class="footer__copyright-credits">
-      Ⓒ 2022 View.com, Inc. All rights reserved
+      Copyright &copy; 2022 OnlineCinema.com All rights reserved
     </p>
     <p class="footer__copyright-credits">
       Terms Privacy CA Privacy Copyright Cookies
     </p>
+
     <div class="footer__media-icons">
       <svg class="footer__svg-icon" viewBox="0 0 548 548">
         <path
