--- a/apps/ux-films-finder/src/app/components/footer/footer.component.less
+++ b/apps/ux-films-finder/src/app/components/footer/footer.component.less
@@ -5,7 +5,6 @@
   flex-wrap: wrap;
   flex-direction: column;
   background-color: @color-gray-66;
-  margin-top: 10px;
   padding: 20px;
 
   &__navigation {
@@ -32,6 +31,7 @@
     justify-content: space-around;
     color: white;
     margin-top: 15px;
+    text-align: center;
   }
 
   &__media-icons {
