--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
@@ -1,4 +1,4 @@
-<div class="search-person">
+<ng-container class="search-person">
   <form class="search-person__search">
     <input
       matInput
@@ -15,35 +15,34 @@
       Найти
     </button>
   </form>
-  <ng-template #noItemsTemplate>
+  <ng-container *ngIf="!searchParam; else contentTemplate">
     <div class="search-person__list _empty">
-      {{
-        !search
-          ? 'Здесь будет отображаться результат, введите что-то в поиск'
-          : ''
-      }}
+      Здесь будет отображаться результат, введите что-то в поиск
     </div>
-  </ng-template>
-  <ng-template #notFoundItemsTemplate>
-    <div class="search-person__list _empty">
-      {{ (person$ | async)?.total === 0 ? 'Такой человек не найден' : '' }}
-    </div>
-  </ng-template>
-  <div
-    class="search-person__list"
-    *ngIf="(person$ | async)?.items?.length; else noItemsTemplate"
-  >
-    <ng-container *ngFor="let person of (person$ | async)?.items">
-      <a routerLink="/persons/{{ person?.kinopoiskId }}">
-        <ff-card
-          class="search-person__list _card"
-          [name]="person?.nameRu ? person.nameRu : person.nameEn"
-          [url]="person?.posterUrl ? person.posterUrl : ''"
-          [gender]="person?.sex ? person.sex : ''"
-        ></ff-card>
-      </a>
+  </ng-container>
+  <ng-template #contentTemplate>
+    <ng-container
+      *ngIf="(person$ | async)?.total === 0; else listTemplate"
+      class="search-person__list _empty"
+    >
+      Такой человек не найден
     </ng-container>
-  </div>
+  </ng-template>
+  <ng-template #listTemplate>
+    <div class="search-person__list">
+      <ng-container *ngFor="let person of (person$ | async)?.items">
+        <a routerLink="/persons/{{ person?.kinopoiskId }}">
+          <ff-card
+            class="search-person__list _card"
+            [name]="person?.nameRu ? person.nameRu : person.nameEn"
+            [url]="person?.posterUrl ? person.posterUrl : ''"
+            [gender]="person?.sex ? person.sex : ''"
+          >
+          </ff-card>
+        </a>
+      </ng-container>
+    </div>
+  </ng-template>
   <mat-paginator
     *ngIf="(person$ | async)?.total as total"
     class="search-person__paginator"
@@ -52,4 +51,4 @@
     (page)="onPageChange($event)"
   >
   </mat-paginator>
-</div>
+</ng-container>
