--- a/apps/ux-films-finder/src/app/components/card/card.component.html
+++ b/apps/ux-films-finder/src/app/components/card/card.component.html
@@ -3,18 +3,8 @@
   <div class="card__name">{{ name }}</div>
   <div class="card__rating" *ngIf="rating > 0">{{ rating }}</div>
   <ng-container *ngIf="gender !== ''">
-    <ng-container
-      class="card__gender"
-      *ngIf="gender === 'FEMALE'; else maleTemplate"
-    >
-      <div class="card__gender _icon _female">
-        <mat-icon>female</mat-icon>
-      </div>
-    </ng-container>
-    <ng-template #maleTemplate>
-      <div class="card__gender _icon _male">
-        <mat-icon>male</mat-icon>
-      </div>
-    </ng-template>
+    <div class="card__gender">
+      <mat-icon>{{ gender === 'FEMALE' ? 'female' : 'male' }}</mat-icon>
+    </div>
   </ng-container>
 </div>
