--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -1,69 +1,83 @@
 @import '../../../assets/styles/themes/dark/common/shared';
 .person {
-  font-size: 20px;
-  line-height: 42px;
+  font-size: 18px;
+  line-height: 32px;
   margin: 40px;
+  background: url('../../../assets/images/gray-stripe.png') no-repeat;
+  background-position: top;
+  &__title {
+    font-size: 20px;
+    line-height: 42px;
+    color: @color-gray-1b;
+    margin-top: 32px;
+  }
+  &__photo {
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    width: 420px;
+    height: 500px;
+    background-color: @color-black-00;
+    padding-left: 12px;
+    margin-right: 32px;
+  }
+  &__img {
+    width: 335px;
+    height: 501px;
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25))
+      drop-shadow(1px -1px 8px rgba(0, 0, 0, 0.25));
+  }
+  &__info {
+    display: flex;
+    flex-direction: column;
+  }
+  &__icon {
+    margin: 4px 24px 0 0;
+  }
+  &__name {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 56px;
+    margin-bottom: 8px;
+  }
+  &__nameEn {
+    font-size: 24px;
+    line-height: 24px;
+  }
+  &__data {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    white-space: nowrap;
+    margin-bottom: 24px;
+  }
+  &__date-title,
+  &__age-title,
+  &__birthplace-title {
+    font-size: 20px;
+    line-height: 42px;
+    color: @color-gray-1b;
+    margin-right: 160px;
+  }
+
+  &__date,
+  &__age,
+  &__birthplace {
+    font-size: 24px;
+    line-height: 24px;
+  }
+  &__birthplace {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
   &__details {
     display: flex;
     flex-direction: row;
 
-    &._img {
-      display: flex;
-      justify-self: center;
-      justify-content: center;
-      width: 420px;
-      height: 500px;
-      background-color: @color-black-00;
-      padding-left: 12px;
-      margin-right: 32px;
-    }
-    &._person-img {
-      width: 335px;
-      height: 501px;
-      filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25))
-        drop-shadow(1px -1px 8px rgba(0, 0, 0, 0.25));
-    }
-
-    &._info {
-      display: flex;
-      flex-direction: column;
-    }
-    &._data {
-      display: grid;
-      grid-template-columns: 2fr 2fr 2fr 2fr;
-      white-space: nowrap;
-    }
-    &._date-title,
-    &._age-title {
-      color: @color-gray-42;
-      margin-bottom: 24px;
-    }
-
-    &._date,
-    &._age,
-    &_.birthplace {
-      font-size: 24px;
-      line-height: 24px;
-    }
-    &._title {
-      display: flex;
-      flex-direction: row-reverse;
-      justify-content: left;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 36px;
-      line-height: 56px;
-      margin-bottom: 8px;
-    }
-    &._nameEn {
-      font-size: 24px;
-      line-height: 24px;
-      margin-bottom: 72px;
-    }
-    &_.birthplace-title {
-      color: @color-gray-42;
-      margin-bottom: 8px;
-    }
     &._female {
       font-size: 40px;
       color: @color-pink-cb;
@@ -72,86 +86,88 @@
       font-size: 40px;
       color: @color-blue-27;
     }
-    &._icon {
-      margin: 4px 24px 0 0;
-    }
-    &_.death {
-      margin-top: 24px;
-    }
   }
-  &__facts {
-    font-size: 20px;
+  &__genres-and-name {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+    margin-bottom: 8px;
+    margin-top: 128px;
+  }
+  &__nameEn {
+    margin-bottom: 72px;
+  }
+
+  &__death {
+    margin-top: 24px;
+  }
+  &__profession {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
     line-height: 32px;
-    &._profession {
-      display: flex;
-      flex-direction: column;
-      font-size: 18px;
-      line-height: 32px;
-      margin-bottom: 24px;
-    }
-    &._profession-title {
-      color: @color-gray-42;
-      margin: 30px 0 8px 0;
-    }
-    &._spouses {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 8px;
-    }
-    &._films {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 32px;
-    }
-    &._relation {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      font-size: 18px;
-      line-height: 32px;
-      margin-top: 8px;
-    }
+    margin-bottom: 24px;
+  }
+  &__profession-title {
+    color: @color-gray-42;
+    margin: 30px 0 8px 0;
+  }
+  &__spouses {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+  }
+  &__spouses-link-name,
+  &__film-nameRu {
+    white-space: nowrap;
+    color: @color-green-04;
+    text-decoration: none;
+  }
+  &__films {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 32px;
+  }
+  &__relation {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    font-size: 18px;
+    line-height: 32px;
+    margin-top: 8px;
+  }
 
-    &._person-link {
-      white-space: nowrap;
-    }
-    &._rating {
-      width: 55px;
-      height: 32px;
-      background: @color-gray-0E;
-      border-radius: 16px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      margin-right: 16px;
-    }
-    &._rating-empty {
-      display: flex;
-      flex-direction: row;
-      width: 71px;
-      height: 32px;
-    }
-    &._name {
-      color: @color-green-04;
-      text-decoration: none;
-    }
-    &._female {
-      font-size: 24px;
-      color: @color-pink-cb;
-    }
+  &._female {
+    font-size: 24px;
+    color: @color-pink-cb;
+  }
 
-    &._film {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      margin-bottom: 16px;
-      white-space: nowrap;
-    }
-
-    &._rating-name,
-    &._icon-and-name {
-      display: flex;
-      flex-direction: row;
-      justify-content: start;
-    }
+  &__rating-empty {
+    display: flex;
+    flex-direction: row;
+    width: 71px;
+    height: 32px;
+  }
+  &__rating {
+    width: 55px;
+    height: 32px;
+    background: @color-gray-0E;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-right: 16px;
+  }
+  &__film {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 16px;
+    white-space: nowrap;
+  }
+  &__rating-name,
+  &__icon-and-name {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
   }
 }
 @media only screen and (max-width: 820px) {
@@ -163,12 +179,11 @@
       flex-direction: column;
       margin: 16px;
       width: 100%;
-
-      &._title {
-        font-size: 24px;
-        line-height: 125%;
-        letter-spacing: 0.08em;
-      }
+    }
+    &__title {
+      font-size: 24px;
+      line-height: 125%;
+      letter-spacing: 0.08em;
     }
     &__facts {
       width: 100%;
