--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -48,7 +48,7 @@
       padding: 0px 16px;
       width: 112px;
       height: 48px;
-      background: #69f0ae;
+      background: @color-green-69;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
       border-radius: 24px;
       font-size: 16px;
