--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -26,6 +26,7 @@
   &__search {
     display: flex;
     flex-direction: row;
+    margin: 20px 0 0 40px;
     &._input {
       display: flex;
       width: 30%;
@@ -37,7 +38,7 @@
       box-sizing: border-box;
       border-radius: 24px;
       font-size: 18px;
-      margin-right: 24px;
+
       padding-left: 3%;
     }
     &._button {
