--- a/apps/ux-films-finder/src/app/components/person/person.component.html
+++ b/apps/ux-films-finder/src/app/components/person/person.component.html
@@ -15,7 +15,7 @@
           <div class="person__genres-and-name">
             <ng-container *ngIf="personsInfo.sex !== ''">
               <mat-icon
-                class="person__icon"
+                class="person__icon-title"
                 [ngClass]="personsInfo.sex === 'FEMALE' ? '_female' : '_male'"
               >
                 {{ personsInfo.sex === 'FEMALE' ? 'female' : 'male' }}
