--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/themes/dark/common/shared';
 .person {
-  font-size: 18px;
+  font-size: 24px;
   line-height: 32px;
   padding: 40px;
   &__title {
@@ -18,6 +18,7 @@
     height: 500px;
     background-color: @color-black-00;
     margin-right: 32px;
+    margin-top: 16px;
     border-radius: 16px;
   }
   &__img {
@@ -32,8 +33,18 @@
   }
   &__icon {
     font-size: 32px;
-    line-height: 56px;
     margin-right: 24px;
+    &._female {
+      color: @color-pink-cb;
+    }
+    &._male {
+      color: @color-blue-27;
+    }
+  }
+  &__icon-title {
+    font-size: 40px;
+    line-height: 56px;
+    margin-left: 8px;
     &._female {
       color: @color-pink-cb;
     }
@@ -101,8 +112,6 @@
   &__profession {
     display: flex;
     flex-direction: column;
-    font-size: 18px;
-    line-height: 32px;
     margin-bottom: 24px;
   }
   &__profession-title {
@@ -156,8 +165,6 @@
   &__relation {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    font-size: 18px;
-    line-height: 56px;
     margin-top: 8px;
   }
 
@@ -222,7 +229,7 @@
     &__age-title,
     &__birthplace-title,
     &__title {
-      color: @color-white-ff;
+      color: @color-gray-ac;
     }
     &__spouses-link-name,
     &__film-nameRu {
