--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -12,20 +12,18 @@
       <a class="header__link" mat-flat-button routerLink="/news">Новости</a>
       <a class="header__link" mat-flat-button routerLink="/show">Ток-шоу</a>
       <a class="header__link" mat-flat-button routerLink="/for-children"
-        >Детский</a
-      >
+        >Детский
+      </a>
       <a class="header__link" mat-flat-button routerLink="/cartoon">
         Мультфильмы
       </a>
     </div>
   </div>
-  <ff-switcher></ff-switcher>
   <div class="header__right-side">
+    <ff-switcher *ngIf="!isShown" class="header__switcher"></ff-switcher>
     <form class="header__search">
-      <div *ngIf="isShown" class="header__search-content">
-        <input class="header__input" />
-        <mat-icon class="header__filter">filter_list</mat-icon>
-        <mat-icon class="header__search-icon" routerLink=".">search</mat-icon>
+      <div *ngIf="isShown || desktop === true" class="header__search-content">
+        <ff-search></ff-search>
       </div>
       <mat-icon
         class="header__search-icon-hidden"
