--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -20,6 +20,8 @@
     margin-right: 32px;
     margin-top: 16px;
     border-radius: 16px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25),
+      1px -1px 8px rgba(0, 0, 0, 0.25);
   }
   &__img {
     width: 335px;
