--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/themes/dark/common/shared';
 .person {
-  font-size: 24px;
+  font-size: 20px;
   line-height: 32px;
   padding: 40px;
   &__title {
@@ -67,6 +67,12 @@
   &__nameEn {
     font-size: 24px;
     line-height: 24px;
+  }
+  &__fact-paragraph {
+    margin-block: 0em;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 16px;
   }
   &__data {
     display: grid;
@@ -167,7 +173,6 @@
   &__relation {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 8px;
   }
 
   &__rating-empty {
@@ -189,14 +194,21 @@
   &__film {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 16px;
+    margin-bottom: 32px;
     white-space: nowrap;
   }
-  &__rating-name,
+  &__rating-name {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    margin-right: 32px;
+    margin-top: 8px;
+  }
   &__icon-and-name {
     display: flex;
     flex-direction: row;
     justify-content: start;
+    margin-right: 16px;
   }
 }
 @media only screen and (max-width: 820px) {
@@ -223,6 +235,11 @@
   }
 }
 .theme-dark {
+  a:hover,
+  a:active,
+  a:focus {
+    color: @color-green-04;
+  }
   & .person {
     &__stripe {
       background-color: @color-gray-1b;
