--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -64,7 +64,7 @@
     line-height: 56px;
     margin-bottom: 8px;
   }
-  &__nameEn {
+  &__name-en {
     font-size: 24px;
     line-height: 24px;
   }
@@ -89,9 +89,7 @@
     margin-right: 160px;
   }
 
-  &__date,
-  &__age,
-  &__birthplace {
+  &__label-info {
     font-size: 24px;
     line-height: 42px;
   }
@@ -104,13 +102,13 @@
     display: flex;
     flex-direction: row;
   }
-  &__genres-and-name {
+  &__gender-and-name {
     display: flex;
     flex-direction: row-reverse;
     justify-content: start;
     margin-top: 88px;
   }
-  &__nameEn {
+  &__name-en {
     margin-bottom: 72px;
   }
 
@@ -131,7 +129,7 @@
     margin-bottom: 8px;
   }
   &__spouses-link-name,
-  &__film-nameRu {
+  &__film-name {
     white-space: nowrap;
     color: @color-green-04;
     text-decoration: none;
@@ -152,27 +150,23 @@
     width: 100%;
     height: 160px;
     z-index: -1;
-    stroke-opacity: 0%;
+    &:after,
     &:before {
       content: '';
       display: flex;
       width: 73px;
       height: 100%;
-      transform: rotate(0.5turn);
       background: url('../../../assets/images/triangles.svg') no-repeat;
     }
-    &:after {
-      content: '';
-      display: flex;
-      width: 73px;
-      height: 100%;
-      background: url('../../../assets/images/triangles.svg') no-repeat;
+    &:before {
+      transform: rotate(0.5turn);
     }
   }
 
   &__relation {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 16px;
   }
 
   &__rating-empty {
@@ -209,6 +203,11 @@
     flex-direction: row;
     justify-content: start;
     margin-right: 16px;
+  }
+  a:hover,
+  a:active,
+  a:focus {
+    color: @color-green-04;
   }
 }
 @media only screen and (max-width: 820px) {
@@ -251,7 +250,7 @@
       color: @color-gray-ac;
     }
     &__spouses-link-name,
-    &__film-nameRu {
+    &__film-name {
       color: @color-green-69;
     }
     &__rating {
