--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -4,59 +4,60 @@
   margin: 57px 40px;
   &__list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    &._empty {
-      display: flex;
-      font-size: 16px;
-    }
-    &._card {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      margin: 60px auto;
-      width: 360px;
-      height: 450px;
-      box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25),
-        1px -1px 8px rgba(0, 0, 0, 0.25);
-      border-radius: 16px;
-      background: @color-black-00;
-    }
+    grid-template-columns: 2fr 2fr 1fr;
+  }
+  &__list-empty {
+    display: flex;
+    font-size: 16px;
+    margin: 16px 40px;
+  }
+  &__card {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 60px 40px;
+    width: 360px;
+    height: 450px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25),
+      1px -1px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    background: @color-black-00;
   }
   &__search {
     display: flex;
     flex-direction: row;
     margin: 20px 0 0 40px;
-    &._input {
-      display: flex;
-      width: 30%;
-      height: 48px;
-      background: url('../../../assets/images/search.svg') no-repeat left;
-      background-color: @color-white-ff;
-      background-position: 19px;
-      border: 2px solid @color-gray-42;
-      box-sizing: border-box;
-      border-radius: 24px;
-      font-size: 18px;
+  }
+  &__input {
+    display: flex;
+    width: 30%;
+    height: 48px;
+    background: url('../../../assets/images/search.svg') no-repeat left;
+    background-color: @color-white-ff;
+    background-position: 19px;
+    border: 2px solid @color-gray-42;
+    box-sizing: border-box;
+    border-radius: 24px;
+    font-size: 18px;
 
-      padding-left: 3%;
-    }
-    &._button {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      padding: 0px 16px;
-      width: 112px;
-      height: 48px;
-      background: @color-green-69;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-      border-radius: 24px;
-      font-size: 16px;
-      line-height: 18px;
-      border: 0;
-      color: @color-black-00;
-    }
+    padding-left: 3%;
+  }
+  &__button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 16px;
+    width: 112px;
+    height: 48px;
+    background: @color-green-69;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 24px;
+    font-size: 16px;
+    line-height: 18px;
+    border: 0;
+    color: @color-black-00;
   }
 }
 @media only screen and (max-width: 820px) {
