--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -40,8 +40,8 @@
     box-sizing: border-box;
     border-radius: 24px;
     font-size: 18px;
-
     padding-left: 3%;
+    margin-right: 24px;
   }
   &__button {
     display: flex;
