--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -213,23 +213,27 @@
 @media only screen and (max-width: 820px) {
   .person {
     font-size: 16px;
-    width: 100%;
+    line-height: 24px;
     &__details {
       display: flex;
       flex-direction: column;
-      margin: 16px;
+      margin: 8px;
       width: 100%;
     }
     &__title {
-      font-size: 24px;
+      font-size: 20px;
       line-height: 125%;
       letter-spacing: 0.08em;
     }
-    &__facts {
-      width: 100%;
+    &__fact-paragraph {
+      font-size: 16px;
+      line-height: 24px;
+      margin-bottom: 16px;
+    }
+    &__data {
       display: flex;
       flex-direction: column;
-      margin: 0 24px;
+      margin-bottom: 8px;
     }
   }
 }
