--- a/apps/ux-films-finder/src/app/components/banner/banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/banner.component.less
@@ -22,88 +22,125 @@
   height: 496px;
   background: black;
   display: flex;
-}
 
-.banner-name {
-  width: 445px;
-  height: 496px;
-  padding-left: 108px;
-}
+  &__name {
+    width: 445px;
+    padding-left: 58px;
 
-.nameRu {
-  width: 305px;
-  margin-top: 90px;
-  margin-bottom: 85px;
-  font-size: 35px;
-  font-weight: bold;
-  color: white;
-  line-height: 1.5;
-}
+    &._nameRu {
+      width: 300px;
+      margin-top: 90px;
+      margin-bottom: 85px;
+      font-size: 35px;
+      font-weight: bold;
+      color: white;
+      line-height: 1.5;
+    }
 
-.nameEn {
-  margin-bottom: 60px;
-  color: rgb(167, 167, 167);
-  font-size: 19px;
-}
+    &._nameEn {
+      width: 300px;
+      margin-bottom: 60px;
+      color: rgb(167, 167, 167);
+      font-size: 19px;
+    }
 
-.genres {
-  width: 305px;
-  color: white;
-  font-size: 16px;
-  line-height: 2.2;
-  word-spacing: 0.5em;
-  text-transform: capitalize;
-}
+    &._genres {
+      width: 300px;
+      color: white;
+      font-size: 16px;
+      line-height: 2.2;
+      word-spacing: 0.5em;
+      text-transform: capitalize;
+    }
+  }
+  &__poster {
+    width: 320px;
+    height: 496px;
+    display: flex;
 
-.poster {
-  width: 320px;
-  height: 496px;
-  display: flex;
-}
+    &._posterUrl img {
+      margin-top: 25px;
+      width: 300px;
+      height: 90%;
+    }
+  }
+  &__description {
+    width: 345px;
+    height: 496px;
+    margin-top: 55px;
+    line-height: 2;
+    margin-left: 15px;
+    display: inline-grid;
+    display: grid;
+    grid-template-columns: 130px 100px;
+    grid-template-rows: 75px 75px 75px 75px 75px;
 
-.posterUrl img {
-  margin-top: 25px;
-  width: 300px;
-  height: 90%;
-}
+    &._rating {
+      grid-area: 1 / 1 / 2 / 2;
+      color: rgb(167, 167, 167);
+      font-size: 14px;
+      text-align: left;
+    }
 
-.description {
-  width: 340px;
-  height: 496px;
-  margin-top: 80px;
-  line-height: 2;
-  margin-left: 4px;
-}
+    &._rating-icon {
+      grid-area: 1 / 2 / 2 / 3;
+      color: black;
+      font-size: 17px;
+      text-align: right;
+    }
 
-.description p {
-  height: 35px;
-  color: rgb(167, 167, 167);
-  font-size: 14px;
-  text-align: left;
-}
-.description table {
-  width: 265px;
-  //border: 1px solid white;
-}
-tr {
-  width: 200px;
-}
+    &._rating-icon p {
+      background: #ffffff;
+      border-radius: 17px;
+      text-align: center;
+      margin-top: 0px;
+      margin-left: 50px;
+    }
 
-td {
-  color: white;
-}
+    &._filmLength {
+      grid-area: 2 / 1 / 3 / 2;
+      color: rgb(167, 167, 167);
+      font-size: 14px;
+      text-align: left;
+    }
 
-.rating-icon {
-  background: #ffffff;
-  border-radius: 16px;
-  padding: 0px 12px 0px 12px;
-  color: black;
-  font-size: 17px;
-}
+    &._filmLength-info {
+      grid-area: 2 / 2 / 3 / 3;
+      color: white;
+      font-size: 16px;
+      text-align: right;
+      word-spacing: 60px;
+    }
 
-.information {
-  text-align: right;
-  word-spacing: 60px;
+    &._countries {
+      grid-area: 3 / 1 / 4 / 2;
+      color: rgb(167, 167, 167);
+      font-size: 14px;
+      text-align: left;
+    }
+
+    &._country {
+      grid-area: 3 / 2 / 4 / 3;
+      color: white;
+      font-size: 16px;
+      text-align: right;
+      word-spacing: 60px;
+    }
+
+    &._years {
+      grid-area: 4 / 1 / 5 / 2;
+      color: rgb(167, 167, 167);
+      font-size: 14px;
+      text-align: left;
+    }
+
+    &._year {
+      grid-area: 4 / 2 / 5 / 3;
+      color: white;
+      font-size: 16px;
+      text-align: right;
+    }
+  }
 }
 
 .navigation-wrapper {
@@ -111,8 +148,8 @@ td {
 }
 
 .arrow {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -122,11 +159,11 @@ td {
 }
 
 .arrow--left {
-  left: 40px;
+  left: 30px;
 }
 
 .arrow--right {
-  right: 40px;
+  right: 30px;
 }
 
 .arrow--disabled {
